[package]
name = "Jwebserver"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
rustls = "0.20"
actix-web-openssl = "4"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
